refactor: 코드리뷰 반영
- 누락된 final 붙이기
- 불필요한 null check 없애기

#63